--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "www.pavel-kaminsky.com",
   "dependencies": {
     "@phenomnomnominal/tsquery": "^2.0.0-beta.4",
+    "@types/progress": "^2.0.1",
     "chalk": "^2.4.1",
     "ejs": "^2.6.1",
     "es6-promise": "^4.2.4",
@@ -33,6 +34,7 @@
     "moment": "^2.22.1",
     "mongoose": "^5.1.5",
     "numeral": "^2.0.6",
+    "progress": "^2.0.0",
     "typescript": "^2.8.3"
   },
   "devDependencies": {
