feat: add a csv exporter from json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev src/importJsonToMongo.ts",
+    "start:mongo": "ts-node-dev src/importJsonToMongo.ts",
+    "start:csv": "ts-node-dev src/convertJsonToCSV.ts",
     "format": "prettier --write src/**/*.{json,ts}",
     "lint": "tslint --project .",
     "test": "yarn lint",
