fix(classifiers): update enviroment.yaml

--- a/classifiers/enviroment.yaml
+++ b/classifiers/enviroment.yaml
@@ -3,6 +3,8 @@ channels:
   - defaults
 dependencies:
   - asn1crypto=0.24.0=py36_0
+  - atomicwrites=1.1.5=py36_0
+  - attrs=18.1.0=py36_0
   - blas=1.0=mkl
   - boto=2.48.0=py36h1a776d2_1
   - boto3=1.7.45=py36_0
@@ -12,27 +14,40 @@ dependencies:
   - certifi=2018.4.16=py36_0
   - cffi=1.11.5=py36h945400d_0
   - chardet=3.0.4=py36h420ce6e_1
+  - click=6.7=py36hec8c647_0
+  - colorama=0.3.9=py36h029ae33_0
   - cryptography=2.2.2=py36hfa6e2cd_0
   - docutils=0.14=py36h6012d8f_0
+  - flask=1.0.2=py36_1
   - gensim=3.4.0=py36h452e1ab_0
   - icc_rt=2017.0.4=h97af966_0
   - idna=2.7=py36_0
   - intel-openmp=2018.0.3=0
+  - itsdangerous=0.24=py36hb6c5a24_1
+  - jinja2=2.10=py36h292fed1_0
   - jmespath=0.9.3=py36h0745840_0
+  - markupsafe=1.0=py36h0e26971_1
   - mkl=2018.0.3=1
   - mkl_fft=1.0.1=py36h452e1ab_0
   - mkl_random=1.0.1=py36h9258bd6_0
+  - more-itertools=4.2.0=py36_0
   - nltk=3.3.0=py36_0
   - numpy=1.14.5=py36h9fa60d3_2
   - numpy-base=1.14.5=py36h5c71026_2
   - openssl=1.0.2o=h8ea7d77_0
   - pandas=0.23.1=py36h830ac7b_0
   - pip=10.0.1=py36_0
+  - pluggy=0.6.0=py36hc7daf1e_0
+  - progressbar2=3.37.1=py36_0
+  - py=1.5.3=py36_0
   - pycparser=2.18=py36hd053e01_1
   - pyopenssl=18.0.0=py36_0
   - pysocks=1.6.8=py36_0
+  - pytest=3.6.2=py36_0
+  - pytest-runner=4.2=py36_0
   - python=3.6.6=hea74fb7_0
   - python-dateutil=2.7.3=py36_0
+  - python-utils=2.3.0=py36_0
   - pytz=2018.4=py36_0
   - requests=2.19.1=py36_0
   - s3transfer=0.1.13=py36_0
@@ -43,8 +58,13 @@ dependencies:
   - urllib3=1.23=py36_0
   - vc=14=h0510ff6_3
   - vs2015_runtime=14.0.25123=3
+  - werkzeug=0.14.1=py36_0
   - wheel=0.31.1=py36_0
   - win_inet_pton=1.0.1=py36he67d7fd_1
   - wincertstore=0.2=py36h7fe50ca_0
+  - pip:
+    - cython==0.28.3
+    - inflection==0.3.1
+    - stringcase==1.2.0
 prefix: D:\devl-tools\Anaconda3\envs\typewiz-classifier
 
